# pydantic-zarr

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml  test.yml
api/core/: index.html
api/v2/: index.html
api/v3/: index.html
docs/: index.md  intro.md  usage.md  usage_zarr_v2.md  usage_zarr_v3.md
docs/api/: core.md  v2.md  v3.md
docs/plugins/: main.py
src/pydantic_zarr/: __init__.py  cli.py  core.py  v2.py  v3.py
tests/: test_core.py  test_docs.py  test_pydantic_unions.py  test_spec.py  test_v2.py  test_v3.py
usage_zarr_v2/: index.html
usage_zarr_v3/: index.html
