[tool.poetry]
name = "pydantic-zarr"
version = "0.1.2"
description = ""
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_zarr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
zarr = "^2.14.2"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
mkdocs = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
