[tool.poetry]
name = "pydantic-zarr"
version = "0.7.0"
description = "pydantic models for zarr"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_zarr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
zarr = "^2.14.2"
pydantic = "^2.0.0"
typing-extensions = {version = "^4.7.1", python = "<3.12"}
eval-type-backport = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
pre-commit = "^3.3.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
pytest-examples = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
